src/iocc/tests/ui/fail/component-attribute-placement.rs
use iocc::prelude::*;

#[component]
struct Test;

fn main() {}
