src/iocc/tests/ui/fail/component-attribute-placement.stderr
error: `#[component]` should be annotated on the `impl` block
 --> tests/ui/fail/component-attribute-placement.rs:4:1
  |
4 | struct Test;
  | ^^^^^^
